--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.8",
+    "embla-carousel-react": "^8.1.8",
+    "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
+    "next-view-transitions": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-wrap-balancer": "^1.1.1",
